# wakiru

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml  ci.yml
scripts/: caldav_oauth_setup.py
src/assistant/: __init__.py  agent.py  api.py  briefing.py  chat.py  chatgpt_backend.py  cli.py  code_exec.py  codex_runner.py  compose.py  config.py  context_providers.py  feeds.py  fired_ledger.py  followups.py  goals.py  heartbeat.py  import_local.py  llm.py  meeting_prep.py  mutes.py  netguard.py  notify.py  ops_parse.py  persona.py  phrasing.py  proactive.py  reflect.py  reminder_windows.py  slack.py  sleep.py  sqlite_util.py  storage_postgres.py  stt.py  telegram.py  threads.py  tools.py  undo.py  watches.py  weather.py  (+4 more)
src/assistant/calendar/: __init__.py  caldav.py  caldav_oauth.py  context.py  google_calendar.py  importance.py  ops.py  outbox.py  recurrence.py  reminders.py  remote.py  store.py  sync.py  undo.py
src/assistant/docs/: __init__.py  context.py  extract.py  store.py  summarize.py
src/assistant/expenses/: __init__.py  context.py  store.py
src/assistant/habits/: __init__.py  context.py  store.py
src/assistant/lists/: __init__.py  store.py
src/assistant/mail/: __init__.py  audit.py  client.py  context.py  oauth.py  snapshot.py
src/assistant/memory/: __init__.py  consolidate.py  embeddings.py  graph.py  index.py  learn.py  locks.py  profile.py  recall.py  store.py
src/assistant/people/: __init__.py  context.py  ops.py  reminders.py  store.py  undo.py
src/assistant/reading/: __init__.py  store.py
src/assistant/storage_postgres/: __init__.py  calendar.py  core.py  docs.py  expenses.py  followups.py  goals.py  graph.py  habits.py  kv.py  ledgers.py  lists.py  mail.py  memory.py  mutes.py  people.py  pushlog.py  reading.py  subscriptions.py  tasks.py  telegram.py  threads.py  trips.py  watches.py  worklog.py
src/assistant/subscriptions/: __init__.py  context.py  reminders.py  store.py
src/assistant/tasks/: __init__.py  context.py  ops.py  reminders.py  store.py  undo.py
src/assistant/tools/: __init__.py  _base.py  calendar.py  code.py  docs.py  email.py  expenses.py  followups.py  goals.py  habits.py  lists.py  memory.py  people.py  reading.py  registry.py  reminders.py  subscriptions.py  tasks.py  trips.py  undo.py  wake.py  watches.py  weather.py  worklog.py
src/assistant/trips/: __init__.py  context.py  store.py
src/assistant/worklog/: __init__.py  context.py  store.py
tests/: conftest.py  test_agent.py  test_api.py  test_briefing.py  test_caldav_sync.py  test_calendar.py  test_calendar_sync.py  test_chat.py  test_chatgpt_backend.py  test_chatgpt_parser.py  test_cli.py  test_code_exec.py  test_codex_parser.py  test_compose.py  test_config.py  test_context_providers.py  test_docs.py  test_docs_extract.py  test_expenses.py  test_feeds.py  test_fired_ledger.py  test_followups.py  test_goals.py  test_google_calendar.py  test_graph.py  test_habits.py  test_heartbeat.py  test_importance.py  test_lists.py  test_llm_tools.py  test_locks.py  test_mail.py  test_meeting_prep.py  test_memory.py  test_mutes.py  test_netguard.py  test_notify.py  test_people.py  test_persona.py  test_phrasing.py  (+19 more)
