[project]
name = "assistant"
version = "0.1.0"
description = "Agentic personal assistant built on LangGraph + LangChain, driving the Codex CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.6",
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pyyaml>=6.0.3",
    "python-dateutil>=2.9",
    "markdown-it-py>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
