[project]
name = "assistant"
version = "0.1.0"
description = "Agentic personal assistant built on LangGraph + LangChain, driving the Codex CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.6",
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pyyaml>=6.0.3",
    "python-dateutil>=2.9",
    "markdown-it-py>=4.2.0",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.8",
    "slack-sdk>=3.43.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "faster-whisper>=1.2.1",
    "icalendar>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12.20260518",
    "types-python-dateutil>=2.9.0.20260518",
]

[project.scripts]
assistant-cli = "assistant.cli:main"
assistant-import-local = "assistant.import_local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # long lines predate the lint config; line-length=100 stays the format target
]

[tool.mypy]
python_version = "3.13"
files = ["src/assistant"]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Burn-down list: langchain/langgraph-adjacent modules with loosely-typed
# third-party surfaces. Remove entries as they're cleaned up.
[[tool.mypy.overrides]]
module = [
    "assistant.agent",
    "assistant.chat",
    "assistant.llm",
    "assistant.telegram",
    "assistant.import_local",
    "assistant.mail.client",
    "assistant.config",
    "assistant.calendar.*",
    "assistant.tasks.*",
]
disable_error_code = [
    "arg-type",
    "return-value",
    "call-arg",
    "call-overload",
    "no-redef",
    "assignment",
]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "faster_whisper"]
ignore_missing_imports = true  # ship no py.typed marker
